[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delegator-tracker"
version = "0.1.0"
description = "CLI app for fetching validator delegator data and summarizing stakes."
authors = [
    { name = "qf3l3k | ChainTools", email = "contact@chaintools.tech" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "tabulate>=0.9.0",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.2",
    "prometheus_client>=0.21.0",
    "requests>=2.32.3",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.1"
]

[project.scripts]
delegator-tracker = "delegator_tracker.__main__:main"


